--- a/HT.walgan.us/index.html
+++ b/HT.walgan.us/index.html
@@ -8,6 +8,7 @@
     <script src="js/modernizr.js"></script>
   </head>
   <body>
+	  <div class="navigation">
 	  <nav class="tab-bar show-for-small">
 	    <a class="left-off-canvas-toggle menu-icon ">
 	      <span>HT</span>
@@ -76,8 +77,10 @@
 	      </ul>
 	    </section>
 	  </nav>
+  </div>
 	  <div class="panel">
  		<p class="text-center"><img src="img/4XCollage.jpg" alt="Four Christs Collage"/></p>
+		<p class="text-center"><img src="img/fullcollageblac kboarder.jpg" alt="spaces are okay"</img></p>
 		<!--
         <h1 class="text-center">History of Theology</h1>
 		<h3 class="text-center">Sixteenth-Century Reforming Traditions to 20th Century Dialectical Theologians</h3>
@@ -111,7 +114,7 @@
 	<div id="myModal" class="reveal-modal" data-reveal>
 	  <p class="lead">If you're not looking for educational materials, it's time for a snack.</p>
 	  <p>
-		  <a href="http://ht503.github.io/Carousel/#/" class="medium success button" target="_blank">Carousel</a>
+		  <a href="Carousel/index.html" class="medium success button" target="_blank">Carousel</a>
 	  <a href="http://www.youtube.com/watch?v=ZIW2Teg4F6k&feature=share&list=PLDE0E37DA58BE091C&index=1" class="medium secondary button" target="_blank">chips & guac</a>
 	   <a href="http://youtu.be/731m0zsbm_w" class="medium secondary button" target="_blank">food for thought</a>
 	   <a href="http://www.mms.com" class="medium secondary button" target="_blank">m&m's</a>
@@ -126,6 +129,5 @@
       $(document).foundation();
     </script>
     <script src="js/foundation/foundation.js"></script>
-    <script src="js/foundation/foundation.magellan.js"></script>
   </body>
 </html>
