--- a/HT.walgan.us/courselinks.html
+++ b/HT.walgan.us/courselinks.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Timeline</title>
+    <title>Links</title>
+	<!--    css          -->
     <link rel="stylesheet" href="css/foundation.css" />
-    <script src="js/modernizr.js"></script>
 	<!--    favicons     -->
 	<link rel="icon" href="img/16xHTfavicon.png" type="image/x-icon">
 	    <!-- For third-generation iPad with high-resolution Retina display: -->
@@ -16,10 +16,25 @@
 	    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/72xHTfavicon.png">
 	    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 	    <link rel="apple-touch-icon-precomposed" href="img/57xHTfavicon.png">
-    <script src="js/modernizr.js"></script>
-  </head>
-  <body>
-	  <h1>Timeline coming soon...</h1>
-	  
-  </body>
-  </html>
+	    <script src="js/modernizr.js"></script>
+	  </head> 
+
+<body>
+
+	<!-- Masonry Container -->
+	<div class="row">
+	  <div class="large-12 columns">
+	 	 
+	 
+	<script src="js/foundation/foundation.js"></script>
+	  <script src="js/foundation/foundation.topbar.js"></script>
+      <script src="js/jquery.js"></script>
+  	<script src="/js/vendor/fastclick.js"></script>
+      <script src="js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+
+
+</body>
+</html>
